# knast

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.org  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
baustelle/: Cargo.toml
baustelle/examples/: fetch_centos.rs
baustelle/src/: archive.rs  containerfile.rs  fetcher.rs  lib.rs  runtime_config.rs  storage.rs  unpacker.rs
baustelle/src/archive/: entry.rs  resource.rs
baustelle/src/containerfile/: instruction.rs
baustelle/src/containerfile/instruction/: from.rs
baustelle/src/runtime_config/: user.rs
baustelle/src/runtime_config/user/: unix_user.rs
baustelle/test/resources/: config.json  containerfile  foo_archive_entries  runtime_config.json  unpacked_layers
baustelle/test/resources/server_mocks/: unix.yml  whiteouts.yml
baustelle/test/resources/server_mocks/basic/: auth.json  config.json  manifest_index.json
baustelle/test/resources/server_mocks/unix/: manifest.json  manifest_index.json
baustelle/test/resources/server_mocks/unix/layer/etc/: group
baustelle/test/resources/server_mocks/whiteouts/: manifest.json  manifest_index.json
baustelle/test/resources/unix/happy_path/etc/: group  passwd
baustelle/test/resources/unix/malformed/etc/: malformed_error_msg  passwd
common_lib/: Cargo.toml  Cargo.toml~
common_lib/src/: lib.rs  lib.rs~
containerd-shim/: Cargo.toml  build.rs
containerd-shim/src/: filesystem.rs  main.rs  oci_extensions.rs  protocols.rs  task_service.rs
docs/: quicklinks.org
knast/: Cargo.toml
knast/src/: filesystem.rs  lib.rs  operations.rs
knast/src/filesystem/: devfs.rs  devfs.rs~  mount.rs  mount.rs~
knast/src/operations/: command_ext.rs  create.rs
knast/test/resources/commands_output/: env
knast/test/resources/container/: config.json
knast/test/resources/container/rootfs/lib/: libc.so.7  libgcc_s.so.1  libm.so.5
libknast/: Cargo.toml
libknast/src/: filesystem.rs  lib.rs  operations.rs
libknast/src/filesystem/: devfs.rs  mount.rs
libknast/src/operations/: command_ext.rs  network.rs  utils.rs
libknast/test/resources/commands_output/: mount  trapster_sigbus
libknast/test/resources/container/rootfs/etc/: passwd
libknast/test/resources/container/rootfs/lib/: libncursesw.so.9  libutil.so.9
netzwerk/: Cargo.toml  build.rs
netzwerk/examples/: bridge_jail.rs
netzwerk/ffi/: ffi.h  pfvar.h
netzwerk/src/: common_bindings.rs  interface.rs  lib.rs  nat.rs  pf.rs  range.rs  route.rs
netzwerk/src/interface/: bindings.rs  operations.rs
netzwerk/src/route/: bindings.rs
netzwerk/test/resources/: ifconfig
registratur/: Cargo.toml
registratur/src/: lib.rs  reqwest_ext.rs
registratur/src/v2/: client.rs  domain.rs
registratur/src/v2/client/: www_authenticate.rs
registratur/src/v2/domain/: config.rs  descriptor.rs  layer.rs  manifest.rs  manifest_index.rs
registratur/test/resources/: config.json  manifest_index.json  www_authenticate
registratur/test/resources/server_mocks/: basic.yml
registratur/test/resources/server_mocks/basic/: layer1  manifest.json
runc/: Cargo.toml
src/: filesystem.rs  lib.rs  main.rs  operations.rs
src/operations/: network.rs
storage/: Cargo.toml
storage/src/: lib.rs  sled_engine.rs  sqlite_engine.rs
storage/src/sqlite_engine/: cas.sql  exists.sql  get.sql  migration.sql  put.sql  remove.sql  try_insert.sql
test/resources/commands_output/: id  mount
test/resources/container/: config.json
test/resources/container/rootfs/: COPYING
test/resources/container/rootfs/etc/: group  master.passwd  nsswitch.conf  spwd.db
test/resources/container/rootfs/lib/: libedit.so.8  libthr.so.3
test/resources/container/rootfs/libexec/: COPYING  ld-elf.so.1
test_helpers/: Cargo.toml
test_helpers/procedural_macros/: Cargo.toml
test_helpers/procedural_macros/src/: lib.rs
test_helpers/src/: lib.rs
