[package]
license = "BSD-4-Clause"
name = "werft"
version = "0.1.0"
authors = ["akhramov"]
edition = "2018"

[dependencies]
baustelle = { path = "./baustelle" }
tokio = { version = "1.1.1", features = ["full"] }

[workspace]
members = [
    "baustelle",
    "netzwerk",
    "registratur",
    "storage",
]