[package]
name = "baustelle"
version = "0.1.0"
authors = ["akhramov"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bincode = "1.2.1"
csv = "1.1"
dockerfile-parser = "0.7.1"
fehler = "1.0"
futures = "0.3"
registratur = { path = "../registratur" }
itertools = "0.9.0"
libzetta = "0.2.1"
libc = "0.2.69"
log = "0.4"
nom = "5"
serde = "1.0"
serde_json = "1.0"
sled = "0.31"

[dev-dependencies]
tempfile = "3.1.0"
tokio = "0.2.18"
test_helpers = { "path" = "../test_helpers" }

[features]
integration_testing = []