[package]
name = "baustelle"
version = "0.1.0"
authors = ["akhramov"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bincode = "1.2.1"
csv = "1.1"
dockerfile-parser = "0.7.1"
fehler = "1.0"
futures = { git = "https://github.com/akhramov/futures-rs", branch = "fix/add-derive-clone-to-with-combinator" }
registratur = { path = "../registratur" }
itertools = "0.9.0"
libzetta = "0.2.1"
libc = "0.2.69"
log = "0.4"
nom = "5"
once_cell = "1.5.2"
serde = "1.0"
serde_json = "1.0"
sled = "0.31"
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
env_logger = "0.8"
tempfile = "3.1.0"
tokio = { version = "1.1.1", features = ["macros", "rt", "rt-multi-thread"] }
test_helpers = { "path" = "../test_helpers" }

[features]
integration_testing = []

[lib]
# Documenting private items is currently not possible.
doctest = false
