[package]
name = "knast"
version = "0.1.0"
authors = ["Artem Khramov <akhramov@pm.me>"]
edition = "2018"

[dependencies]
anyhow = "1"
baustelle = { path = "../baustelle" }
common_lib = { path = "../common_lib" }
fehler = "1"
jail = { git = "https://github.com/fubarnetes/libjail-rs", branch = "dev" }
libc = "0.2.71"
nix = "0.20.0"
serde_json = "1"

[dev-dependencies]
test_helpers = { path = "../test_helpers" }
tempfile = "3.1.0"