[package]
name = "netzwerk"
version = "0.1.0"
authors = ["akhramov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fehler = { git = "https://github.com/withoutboats/fehler" }
libc = "0.2.71"

[dev-dependencies]
test_helpers = { path = "../test_helpers" }
jail = { git = "https://github.com/fubarnetes/libjail-rs", branch = "dev" }
nix = "0.17.0"
