[package]
license = "BSD-4-Clause"
description = "Docker Registry API client"
name = "registratur"
version = "0.1.0"
authors = ["akhramov"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.30"
chrono = { version = "0.4", features = ["serde"] }
# https://github.com/withoutboats/fehler/pull/51
fehler = { git = "https://github.com/withoutboats/fehler" }
futures = "0.3"
reqwest = { version = "0.10", features = ["json", "stream"] }
hex = "0.4.2"
log = "0.4"
nom = "5"
ring = "0.16.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"

[dev-dependencies]
serde = "1.0"
test_helpers = { path = "../test_helpers" }

[features]
integration_testing = []